--- a/src/components/code/code-js/pages/elem-code-js.html
+++ b/src/components/code/code-js/pages/elem-code-js.html
@@ -5,7 +5,7 @@
   <div class="anchor" id="content"></div>
   <h2>Содержание</h2>
 </div>
-  
+
 <!-- Содержание -->
 <div class="article article__content">
 
@@ -29,6 +29,8 @@
   <p><a href="https://metanit.com/web/javascript/">metanit.com/web/javascript</a> Руководство по JavaScript (обновление 2023-07-15)</p>
   <p><a href="https://jsexpert.net/handbook/">jsexpert.net/handbook/</a> JavaScript справочник</p>
   <p><a href="https://www.w3resource.com/javascript-exercises/">w3resource.com/javascript-exercises/</a> JavaScript упражнения</p>
+  <p><a href="https://www.30secondsofcode.org/">30secondsofcode.org</a> 30secondsofcode.org</p>
+  <p><a href="https://www.javascripttutorial.net/">javascripttutorial.net</a> JavaScript Tutorial</p>
 
   <h3>Статьи на habr</h3>
 
@@ -190,51 +192,51 @@
   <p>Ключевые слова - это имена (идентификаторы), зарезервированные для специального использования. Ключевые слова нельзя использовать в качестве имен переменных и функций.</p>
 
   <p>В JavaScript существуют следующие ключевые слова (часть из них на самом деле являются ключевыми словами языка Java, а в JavaScript зарезервированы лишь в целях большей совместимости):</p>
-  
+
   <div class="flex-keywords">
-    <div>await</div> <div>break</div>	<div>case</div> <div>catch</div>  
-    <div>class</div> <div>const</div> <div>continue</div> <div>debugger</div>  
+    <div>await</div> <div>break</div>	<div>case</div> <div>catch</div>
+    <div>class</div> <div>const</div> <div>continue</div> <div>debugger</div>
     <div>default</div> <div>delete</div> <div>do</div> <div>else</div> <div>enum</div>
     <div>export</div>  <div>extends</div> <div>false</div> <div>finally</div>
     <div>for</div> <div>function</div> <div>if</div> <div>import</div> <div>in</div>        <div>instanceof</div> <div>new</div> <div>null</div> <div>return</div> <div>super</div> <div>switch</div> <div>this</div> <div>throw</div> <div>true</div> <div>try</div>
     <div>typeof</div> <div>var</div> <div>void</div> <div>while</div> <div>with</div>
     <div>yield</div>
   </div>
-    
+
   <p>Кроме вышеприведенных ключевых слов, программисту не рекомендуется использовать в качестве имен переменных и функций следующие идентификаторы:</p>
-    
+
   <p>
-    alert  	isNaN  	pageYOffset  
-    anchor  	java  	parent  
-    area  	JavaArray  	parseFloat  
-    array  	JavaClass  	parseInt  
-    assign  	JavaObject  	password  
-    blur  	JavaPackage  	pkcs11  
-    button  	innerHeight  	plugin  
-    checkbox  	innerWidth  	prompt  
-    clearTimeout  	length  	prototype  
-    clientInformation  	link  	radio  
-    close  	location  	ref  
-    closed  	Math  	reset  
-    confirm  	MimeType  	screenX  
-    crypto  	name  	screenY  
-    date  	navigate  	scroll  
-    defaultStatus  	navigator  	secure  
-    document  	netscape  	select  
-    element  	number  	self  
-    escape  	object  	setTimeout  
-    eval  	offscreenBuffering  	status  
-    event  	onblur  	string  
-    fileUpload  	onerror  	submit  
-    focus  	onfocus  	sun  
-    form  	onload  	taint  
-    frame  	onunload  	text  
-    frames  	open  	textarea  
-    frameRate  	opener  	top  
-    function  	option  	toString  
-    getClass  	outerHeight  	unescape  
-    hidden  	outerWidth  	untaint  
-    history  	packages  	valueOf  
+    alert  	isNaN  	pageYOffset
+    anchor  	java  	parent
+    area  	JavaArray  	parseFloat
+    array  	JavaClass  	parseInt
+    assign  	JavaObject  	password
+    blur  	JavaPackage  	pkcs11
+    button  	innerHeight  	plugin
+    checkbox  	innerWidth  	prompt
+    clearTimeout  	length  	prototype
+    clientInformation  	link  	radio
+    close  	location  	ref
+    closed  	Math  	reset
+    confirm  	MimeType  	screenX
+    crypto  	name  	screenY
+    date  	navigate  	scroll
+    defaultStatus  	navigator  	secure
+    document  	netscape  	select
+    element  	number  	self
+    escape  	object  	setTimeout
+    eval  	offscreenBuffering  	status
+    event  	onblur  	string
+    fileUpload  	onerror  	submit
+    focus  	onfocus  	sun
+    form  	onload  	taint
+    frame  	onunload  	text
+    frames  	open  	textarea
+    frameRate  	opener  	top
+    function  	option  	toString
+    getClass  	outerHeight  	unescape
+    hidden  	outerWidth  	untaint
+    history  	packages  	valueOf
     image  	pageXOffset  	window  </p>
 </article>
 
