--- a/src/components/front/front-base/pages/elem-base-algorithm.html
+++ b/src/components/front/front-base/pages/elem-base-algorithm.html
@@ -20,17 +20,18 @@
         Лекции преподавателей МГУ
       </li>
       <li>
-        <a href="https://ru.hexlet.io/courses/basic-algorithms/lessons/sorting/theory_unit">ru.hexlet.io</a>
-        Основные виды сортировок и примеры их реализации (Илья Шишков 2020-01-16)
-      </li>
-      <li>
-        <a href="https://academy.yandex.ru/handbook/algorithms">academy.yandex.ru</a>
-        Основы алгоритмов
+        <a href="hhttps://education.yandex.ru/handbook/algorithms">education.yandex.ru/handbook/algorithms</a>
+        Яндеск образование. Основы алгоритмов
       </li>
       <li>
         <a
-          href="https://academy.yandex.ru/journal/osnovnye-vidy-sortirovok-i-primery-ikh-realizatsii">academy.yandex.ru</a>
+          href="https://education.yandex.ru/journal/osnovnye-vidy-sortirovok-i-primery-ikh-realizatsii">education.yandex.ru</a>
         Основные виды сортировок и примеры их реализации (Илья Шишков 2020-01-16)
+      </li>
+      <li>
+        <a
+          href="https://education.yandex.ru/knowledge/algoritmy">education.yandex.ru</a>
+        Алгоритмы (Илья Волков 2020-04-24)
       </li>
       <li>
         <a href="https://bimlibik.github.io/posts/complexity-of-algorithms/">bimlibik.github.io</a>
@@ -38,9 +39,6 @@
       </li>
       <li>
         <a href="https://thecode.media/sort/">thecode.media</a> Зачем нужна сортировка в программировании (2021-06-30)
-      </li>
-      <li>
-        <a href="https://thecode.media/bubble-sort/">thecode.media</a> Как работает пузырьковая сортировка (2021-07-05)
       </li>
       <li>
         <a href="https://dzen.ru/a/ZEpeLTjDQ28UUYOp">dzen.ru</a> Алгоритмы программирования: применение и сложность O(n)
