--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -42,8 +42,11 @@
     <li><a href="rs-test/rs-test-gitgithub.html" class="js-rs-test">Git & GitHub #2</a> (96 из 100)</li>
     <li><a href="rs-test/rs-test-algorithms.html" class="js-rs-test">Algorithms & Data structures</a> (92 из 100)</li>
     <hr>
-    <li><a href="rs-test/rs-test-cleancode.html" class="js-rs-test">Clean-code</a> (0 из 100)</li>
-    <li><a href="rs-test/rs-test-linters.html" class="js-rs-test">Linters, Formatters and Husky</a> (0 из 100)</li>
+    <li><a href="rs-test/rs-test-cleancode.html" class="js-rs-test">Clean-code</a> (88 из 100)</li>
+    <li><a href="rs-test/rs-test-linters.html" class="js-rs-test">Linters, Formatters and Husky</a> (85 из 100)</li>
+    <hr>
+    <li><a href="rs-test/rs-test-modules.html" class="js-rs-test">Modules in JavaScript</a> (78 из 100)</li>
+    <li><a href="rs-test/rs-test-bundlers.html" class="js-rs-test">Introduction to Bundlers</a> (86 из 100)</li>
   </ol>
 </article>
 
