--- a/src/components/front/front-edu/pages/elem-edu-rss2023-stage1.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2023-stage1.html
@@ -21,6 +21,7 @@
     <a href="#week9" class="contents__link">Week 9</a>
     <a href="#week10" class="contents__link">Week 10</a>
     <a href="#week11" class="contents__link">Week 11</a>
+    <a href="#week12" class="contents__link">Week 12</a>
     <a href="#video" class="contents__link">Video</a>
   </div>
 </div>
@@ -410,11 +411,28 @@
   <div class="anchor" id="week8"></div>
   <h3>Неделя #8 (9 января 2024) (10 мая 2022)</h3>
   <ul>
-    <li>Cross-check review of the project 'Clean Code S1E1'</li>
-    <li><a href="/rolling-scopes-school/tasks/blob/master/tasks/css-mem-slider">Проект "CSS Meme Slider"</a></li>
-    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/modules-in-js">Module: "Modules in JS"</a></li>
-    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/chrome-devtools">Module: "Chrome DevTools"</a></li>
-    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/virtual-keyboard/virtual-keyboard-en.md">virtual-keyboard</a></li>
+    <li>Cross-Check Reviews:
+      <ul>
+        <li>Cross-check review of project "Clean Code S1E1"</li>
+      </ul>
+    </li>
+    <li>Modules:
+      <ul>
+        <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/modules-in-js">Module: Modules in JS</a></li>
+        <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/bundlers">Module Bundlers</a></li>
+      </ul>
+      <li>Tasks:
+        <ul>
+          <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/tasks/hangman">Hangman</a></li>
+        </ul>
+      </li>
+      <li>Tests:
+        <ul>
+          <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/modules-in-js">[St1] Modules in JS</a></li>
+          <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/bundlers">[St1] Introduction to Bundlers</a></li>
+        </ul>
+      </li>
+    </li>
   </ul>
 </article>
 
@@ -423,9 +441,21 @@
   <div class="anchor" id="week9"></div>
   <h3>Неделя #9 (16 января 2024) (17 мая 2022)</h3>
   <ul>
-    <li>Cross-check review of the project "virtual-keyboard"</li>
-    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/node-materials">Module: "Node.js"</a></li>
-    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/html-builder">Project "HTML-Builder"</li>
+    <li>Cross-Check Reviews:
+      <ul>
+        <li>Cross-check review of project "Hangman"</li>
+      </ul>
+    </li>
+    <li>Modules:
+      <ul>
+        <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/node-materials">Module: Node.js</a></li>
+      </ul>
+      <li>Tasks:
+        <ul>
+          <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/tasks/html-builder">Project "HTML-Builder"</a></li>
+        </ul>
+      </li>
+    </li>
   </ul>
 </article>
 
@@ -434,21 +464,62 @@
   <div class="anchor" id="week10"></div>
   <h3>Неделя #10 (23 января 2024) (24 мая 2022)</h3>
   <ul>
-    <li>Cross-check review of project "HTML-Builder"</li>
-    <li><a href="https://github.com/rolling-scopes-school/tasks/tree/master/stage1/modules/client-server">Module: "Client-Server interaction overview"</a></li>
-    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/webpack">Module: "Webpack"</a></li>
-    <li>Выполнить задание <a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/minesweeper/README.md">Final task stage1 - Minesweeper</a></li>
+    <li>Cross-Check Reviews:
+      <ul>
+        <li>Cross-check review of project "HTML-Builder"</li>
+      </ul>
+    </li>
+    <li>Modules:
+      <ul>
+        <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/chrome-devtools">Module: Chrome DevTools</a></li>
+      </ul>
+      <li>Tasks:
+        <ul>
+          <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/tasks">Final task stage1</a></li>
+        </ul>
+      </li>
+      <li>Tests:
+        <ul>
+          <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/chrome-devtools">[St1] Chrome DevTools</a></li>
+        </ul>
+      </li>
+    </li>
   </ul>
 </article>
 
 <!-- Week 11 -->
 <article class="article">
   <div class="anchor" id="week11"></div>
-  <h3>Неделя #11 (31 мая 2022)</h3>
+  <h3>Неделя #11 (30 января 2024) (31 мая 2022)</h3>
   <ul>
+    <li>Modules:
+      <ul>
+        <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/client-server">[St1] Client-Server Interaction Overview</a></li>
+      </ul>
+      <li>Tasks:
+        <ul>
+          <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/tasks">Final task stage1</a></li>
+        </ul>
+      </li>
+      <li>Tests:
+        <ul>
+          <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/client-server">[St1] Client-Server Interaction Overview</a></li>
+        </ul>
+      </li>
+    </li>
+  </ul>
+</article>
+
+<!-- Week 12 -->
+<article class="article">
+  <div class="anchor" id="week12"></div>
+  <h3>Неделя #12 (6 февраля 2024)</h3>
+  <ul>
+    <li>Cross-check review of the Final task stage1</li>
     <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/self-introduction">Project "Self-introduction"</a></li>
-    <li>Preparation for mentor interview (Подготовка к собеседованию с ментором)</li>
-    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/minesweeper/README.md">Final task stage1 - Minesweeper</a></li>
+    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/classes-prototypes">Module: "JavaScript. Classes & Prototypes"</a></li>
+    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage1/modules/oop-basics">Module: Object-Oriented Programming Basics</a></li>
+    <li><a href="https://github.com/rolling-scopes-school/tasks/blob/master/stage2/modules/technical-screening">Preparation for Technical Screening(Подготовка к собеседованию с ментором)</a></li>
   </ul>
 </article>
 
