--- a/src/components/code/code-js/pages/elem-code-string.html
+++ b/src/components/code/code-js/pages/elem-code-string.html
@@ -13,7 +13,6 @@
     <p><a href="#links">links</a></p>
     <p><a href="#string">string</a></p>
     <p><a href="#methods">Методы строк</a></p>
-    <p><a href="#ascii">Таблица ASCII</a></p>
   </div>
 
 </div>
@@ -24,7 +23,9 @@
   <h2>links</h2>
 
   <p><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String">developer.mozilla.org/String</a></p>
-  <p><a href="https://learn.javascript.ru/string">https://learn.javascript.ru/string</a></p>
+  <p><a href="https://learn.javascript.ru/string">learn.javascript.ru/string</a></p>
+  <p><a href="https://doka.guide/js/string/">doka.guide/js/string</a></p>
+  <p><a href="https://metanit.com/web/javascript/6.1.php">metanit.com</a></p>
 </article>
 
 <!-- string-->
@@ -151,143 +152,163 @@
     </tr>
     <tr>
       <td>7</td>
-      <th><a href="#from-char-code-string">fromCharCode()</a></th>
+      <th><a href="#from-char-code-string">String.fromCharCode()</a></th>
       <td>Преобразует значения Unicode в символы</td>
     </tr>
     <tr>
       <td>8</td>
+      <th><a href="#from-code-point-string">String.fromCodePoint()</a></th>
+      <td>Возвращает строку, созданную из указанной последовательности кодовых точек</td>
+    </tr>
+    <tr>
+      <td>9</td>
       <th><a href="#includes-string">includes()</a></th>
       <td>Возвращает true если строка содержит указанную подстроку</td>
     </tr>
     <tr>
-      <td>9</td>
+      <td>10</td>
       <th><a href="#index-of-string">indexOf()</a></th>
       <td>Возвращает индекс первого вхождения в строке</td>
     </tr>
     <tr>
-      <td>10</td>
+      <td>11</td>
+      <th><a href="#is-well-formed-string">isWellFormed()</a></th>
+      <td>returns a boolean indicating whether this string contains any lone surrogates.</td>
+    </tr>
+    <tr>
+      <td>12</td>
       <th><a href="#last-index-of-string">lastIndexOf()</a></th>
       <td>Возвращает индекс последнего вхождения в строке</td>
     </tr>
     <tr>
-      <td>11</td>
+      <td>13</td>
       <th><a href="#locale-compare-string">localeCompare()</a></th>
       <td>Возвращает 1, 0, -1 как результат сравнения двух строк</td>
     </tr>
     <tr>
-      <td>12</td>
+      <td>14</td>
       <th><a href="#match-string">match()</a></th>
       <td>Ищет строку для соответствия регулярному выражению и возвращает совпадения</td>
     </tr>
     <tr>
-      <td>13</td>
-      <th><a href="#match-all-string">matchAll()</a></th>
-      <td></td>
-    </tr>
-    <tr>
-      <td>14</td>
-      <th><a href="#normalize-string">normalize()</a></th>
-      <td></td>
-    </tr>
-    <tr>
       <td>15</td>
+      <th><a href="#match-all-string">matchAll()</a></th>
+      <td>возвращает итератор по всем результатам при сопоставлении строки с регулярным выражением</td>
+    </tr>
+    <tr>
+      <td>16</td>
+      <th><a href="#normalize-string">normalize()</a></th>
+      <td>возвращает форму нормализации Юникода данной строки</td>
+    </tr>
+    <tr>
+      <td>17</td>
       <th><a href="#pad-end-string">padEnd()</a></th>
       <td>Добавление символов в конец строки</td>
     </tr>
     <tr>
-      <td>16</td>
+      <td>18</td>
       <th><a href="#pad-start-string">padStart()</a></th>
       <td>Добавление символов в начало строки</td>
     </tr>
     <tr>
-      <td>17</td>
+      <td>19</td>
+      <th><a href="#raw-string">String.raw()</a></th>
+      <td>используется для получения необработанной строки из шаблона</td>
+    </tr>
+    <tr>
+      <td>20</td>
       <th><a href="#repeat-string">repeat()</a></th>
       <td>Возвращает строку, повторяющую исходную указанное количество раз</td>
     </tr>
     <tr>
-      <td>18</td>
+      <td>21</td>
       <th><a href="#replace-string">replace()</a></th>
       <td>Заменяет указанное значение (первое вхождение) в строке</td>
     </tr>
     <tr>
-      <td>19</td>
+      <td>22</td>
       <th><a href="#replace-all-string">replaceAll()</a></th>
       <td>Заменяет указанное значение (все вхождения) в строке</td>
     </tr>
     <tr>
-      <td>20</td>
+      <td>23</td>
       <th><a href="#search-string">search()</a></th>
       <td></td>
     </tr>
     <tr>
-      <td>21</td>
+      <td>24</td>
       <th><a href="#search-string">slice()</a></th>
       <td>Извлечение подстроки</td>
     </tr>
     <tr>
-      <td>22</td>
+      <td>25</td>
       <th><a href="#search-string">split()</a></th>
       <td>Разбиение строк</td>
     </tr>
     <tr>
-      <td>23</td>
+      <td>26</td>
       <th><a href="#starts-with-string">startsWith()</a></th>
       <td></td>
     </tr>
     <tr>
-      <td>24</td>
+      <td>27</td>
       <th><a href="#starts-with-string">substring()</a></th>
       <td>Извлечение подстроки</td>
     </tr>
     <tr>
-      <td>25</td>
+      <td>28</td>
       <th><a href="#to-local-lower-case-string">toLocaleLowerCase()</a></th>
       <td></td>
     </tr>
     <tr>
-      <td>26</td>
+      <td>29</td>
       <th><a href="#to-local-upper-case-string">toLocaleUpperCase()</a></th>
       <td></td>
     </tr>
     <tr>
-      <td>27</td>
+      <td>30</td>
       <th><a href="#to-lower-case-string">toLowerCase()</a></th>
       <td>Преобразует все символы в нижний регистр</td>
     </tr>
     <tr>
-      <td>28</td>
+      <td>31</td>
       <th><a href="#to-string-string">toString()</a></th>
       <td></td>
     </tr>
     <tr>
-      <td>29</td>
+      <td>32</td>
       <th><a href="#to-upper-case-string">toUpperCase()</a></th>
       <td>Преобразует все символы в верхний регистр</td>
     </tr>
     <tr>
-      <td>30</td>
+      <td>33</td>
+      <th><a href="#to-well-formed-string">toWellFormed()</a></th>
+      <td>returns a string where all lone surrogates of this string are replaced with the Unicode replacement character U+FFFD.</td>
+    </tr>
+    <tr>
+      <td>34</td>
       <th><a href="#trim-string">trim()</a></th>
       <td>Отсечение пробелов в начале и конце строки</td>
     </tr>
     <tr>
-      <td>31</td>
+      <td>35</td>
       <th><a href="#trim-end-string">trimEnd()</a></th>
       <td>Отсечение пробелов в конце строки</td>
     </tr>
     <tr>
-      <td>32</td>
+      <td>36</td>
       <th><a href="#trim-start-string">trimStart()</a></th>
       <td>Отсечение пробелов в начале строки</td>
     </tr>
     <tr>
-      <td>33</td>
+      <td>37</td>
       <th><a href="#value-of-string">valueOf()</a></th>
       <td></td>
     </tr>
   </table>
 </article>
 
-<!-- at() -->
+<!-- 1. at() -->
 <article class="article">
   <div class="anchor" id="at-string"></div>
   <h3>Метод At()</h3>
@@ -297,7 +318,7 @@
   <br>console.log(res); // 'F'</code>
 </article>
 
-<!-- charAt() -->
+<!-- 2. charAt() -->
 <article class="article">
   <div class="anchor" id="char-at-string"></div>
   <h3>Метод charAt()</h3>
@@ -311,7 +332,7 @@
   <code>console.log(b); // 't'</code>
 </article>
 
-<!-- charCodeAt() -->
+<!-- 3. charCodeAt() -->
 <article class="article">
   <div class="anchor" id="char-code-at-string"></div>
   <h3>Метод charCodeAt()</h3>
@@ -326,7 +347,7 @@
   </code>
 </article>
 
-<!-- codePointeAt() -->
+<!-- 4. codePointeAt() -->
 <article class="article">
   <div class="anchor" id="code-pointe-at-string"></div>
   <h3>Метод codePointAt()</h3>
@@ -337,7 +358,7 @@
   </code>
 </article>
 
-<!-- concat() -->
+<!-- 5. concat() -->
 <article class="article">
   <div class="anchor" id="concat-string"></div>
   <h3>Метод concat()</h3>
@@ -355,30 +376,39 @@
   <code>console.log(b); // 'Frontend1234'</code>
 </article>
 
-<!-- endsWith() -->
+<!-- 6. endsWith() -->
 <article class="article">
   <div class="anchor" id="ends-with-string"></div>
   <h3>Метод endsWith()</h3>
   <p>Метод endsWith проверяет, заканчивается ли строка на указанную в первом параметре подстроку. Если заканчивается, то возвращает true, а если не заканчивается,то false. Вторым необязательным параметром можно принудительно указать длину строки. В этом случае проверка будет не настоящего конца строки, а указанного.</p>
 </article>
 
-<!-- fromCharCode() -->
+<!-- 7. String.fromCharCode() -->
 <article class="article">
   <div class="anchor" id="from-char-code-string"></div>
-  <h3>Метод fromCharCode()</h3>
+  <h3>Метод String.fromCharCode()</h3>
   <p>Преобразует числовые значения Юникода в читаемые символы</p>
   <code>String.fromCharCode(72, 101, 108, 108, 11);
   <br>'Hello'</code>
 </article>
 
-<!-- includes() -->
+<!-- 8. String.fromCodePoint() -->
+<article class="article">
+  <div class="anchor" id="from-code-point-string"></div>
+  <h3>Метод String.fromCodePoint()</h3>
+  <p>Возвращает строку, созданную из указанной последовательности кодовых точек</p>
+  <code>String.fromCodePoint(65, 90);
+  <br>'AZ'</code>
+</article>
+
+<!-- 9. includes() -->
 <article class="article">
   <div class="anchor" id="includes-string"></div>
   <h3>Метод includes()</h3>
   <p>Метод includes выполняет поиск заданной строки в текущей с учетом регистра. Первым параметром метод принимает строку, которую нужно найти, вторым необязательным - позицию, с которой нужно начинать поиск. После выполнения метод возвращает true или false.</p>
 </article>
 
-<!-- indexOf() -->
+<!-- 10. indexOf() -->
 <article class="article">
   <div class="anchor" id="index-of-string"></div>
   <h3>Метод indexOf()</h3>
@@ -396,7 +426,14 @@
   <code>console.log(b); // 3</code>
 </article>
 
-<!-- lastIndexOf() -->
+<!-- 11. isWellFormed() -->
+<article class="article">
+  <div class="anchor" id="is-well-formed-string"></div>
+  <h3>Метод isWellFormed()</h3>
+  <p>returns a boolean indicating whether this string contains any lone surrogates.</p>
+</article>
+
+<!-- 12. lastIndexOf() -->
 <article class="article">
   <div class="anchor" id="last-index-of-string"></div>
   <h3>Метод lastIndexOf()</h3>
@@ -412,7 +449,7 @@
   <code>console.log(b); // 6</code>
 </article>
 
-<!-- localeCompare() -->
+<!-- 13. localeCompare() -->
 <article class="article">
   <div class="anchor" id="locale-compare-string"></div>
   <h3>Метод localeCompare()</h3>
@@ -425,26 +462,28 @@
   </p>
 </article>
 
-<!-- match() -->
+<!-- 14. match() -->
 <article class="article">
   <div class="anchor" id="match-string"></div>
   <h3>Метод match()</h3>
   <p>Метод match() ищет строку для соответствия регулярному выражению и возвращает совпадения в качестве объекта Array.</p>
 </article>
 
-<!-- matchAll() -->
+<!-- 15. matchAll() -->
 <article class="article">
   <div class="anchor" id="match-all-string"></div>
   <h3>Метод matchAll()</h3>
+  <p>возвращает итератор по всем результатам при сопоставлении строки с регулярным выражением</p>
 </article>
 
-<!-- normalize() -->
+<!-- 16. normalize() -->
 <article class="article">
   <div class="anchor" id="normalize-string"></div>
   <h3>Метод normalize()</h3>
+  <p>возвращает форму нормализации Юникода данной строки</p>
 </article>
 
-<!-- padEnd() -->
+<!-- 17. padEnd() -->
 <article class="article">
   <div class="anchor" id="pad-end-string"></div>
   <h3>Метод padEnd(num [, str])</h3>
@@ -465,7 +504,7 @@
   <br>"Frontendvuevuevuevue"</code>
 </article>
 
-<!-- padStart() -->
+<!-- 18. padStart() -->
 <article class="article">
   <div class="anchor" id="pad-start-string"></div>
   <h3>Метод padStart(num [, str])</h3>
@@ -486,7 +525,16 @@
   <br>"vuevuevuevueFrontend"</code>
 </article>
 
-<!-- repeat() -->
+<!-- 19. String.raw() -->
+<article class="article">
+  <div class="anchor" id="raw-string"></div>
+  <h3>Метод String.raw()</h3>
+  <p>используется для получения необработанной строки из шаблона</p>
+  <code>String.raw`Привет\n${2 + 3}!`;
+  <br>'Привет\n5!', символ после 'Привет' не является символом новой строки</code>
+</article>
+
+<!-- 20. repeat() -->
 <article class="article">
   <div class="anchor" id="repeat-string"></div>
   <h3>Метод repeat()</h3>
@@ -510,7 +558,7 @@
   <code>console.log(b); // 'frontfrontfront'</code>
 </article>
 
-<!-- replace() -->
+<!-- 21. replace() -->
 <article class="article">
   <div class="anchor" id="replace-string"></div>
   <h3>Метод replace()</h3>
@@ -519,7 +567,7 @@
   <br>Backend</code>
 </article>
 
-<!-- replaceAll() -->
+<!-- 22. replaceAll() -->
 <article class="article">
   <div class="anchor" id="replace-all-string"></div>
   <h3>Метод replaceAll()</h3>
@@ -528,13 +576,13 @@
   <br>BackBackend</code>
 </article>
 
-<!-- search() -->
+<!-- 23. search() -->
 <article class="article">
   <div class="anchor" id="search-string"></div>
   <h3>Метод search()</h3>
 </article>
 
-<!-- slice() -->
+<!-- 24. slice() -->
 <article class="article">
   <div class="anchor" id="slice-string"></div>
   <h3>Метод slice()</h3>
@@ -549,7 +597,7 @@
   <br>nte</code>
 </article>
 
-<!-- split() -->
+<!-- 25. split() -->
 <article class="article">
   <div class="anchor" id="split-string"></div>
   <h3>Метод split()</h3>
@@ -570,13 +618,13 @@
   <code>console.log(b); // ['F', 'r', 'o', 'n', 't', 'e', 'n', 'd']</code>
 </article>
 
-<!-- startsWith() -->
+<!-- 26. startsWith() -->
 <article class="article">
   <div class="anchor" id="starts-with-string"></div>
   <h3>Метод startsWith()</h3>
 </article>
 
-<!-- substring() -->
+<!-- 27. substring() -->
 <article class="article">
   <div class="anchor" id="substring-string"></div>
   <h3>Метод substring(indexA [, indexB])</h3>
@@ -589,19 +637,19 @@
   <p>В отличие от slice, можно задавать start больше, чем end. Отрицательные значения не поддерживаются, они интерпретируются как 0.</p>
 </article>
 
-<!-- toLocaleLowerCase() -->
+<!-- 28. toLocaleLowerCase() -->
 <article class="article">
   <div class="anchor" id="to-local-lower-case-string"></div>
   <h3>Метод toLocaleLowerCase()</h3>
 </article>
 
-<!-- toLocaleUpperCase() -->
+<!-- 29. toLocaleUpperCase() -->
 <article class="article">
   <div class="anchor" id="to-local-upper-case-string"></div>
   <h3>Метод toLocaleUpperCase()</h3>
 </article>
 
-<!-- toLowerCase() -->
+<!-- 30. toLowerCase() -->
 <article class="article">
   <div class="anchor" id="to-lower-case-string"></div>
   <h3>Метод toLowerCase()</h3>
@@ -616,13 +664,16 @@
   <code>console.log(b); // 'frontend'</code>
 </article>
 
-<!-- toString() -->
+<!-- 31. toString() -->
 <article class="article">
   <div class="anchor" id="to-string-string"></div>
   <h3>Метод toString()</h3>
+  <p>возвращает строку, представляющую указанный объект</p>
+  <code>var x = new String("Привет, мир");
+  <br>console.log(x.toString()); // Отобразит 'Привет, мир'</code>
 </article>
 
-<!-- toUpperCase() -->
+<!-- 32. toUpperCase() -->
 <article class="article">
   <div class="anchor" id="to-upper-case-string"></div>
   <h3>Метод toUpperCase()</h3>
@@ -637,7 +688,13 @@
   <code>console.log(b); // 'FRONTEND'</code>
 </article>
 
-<!-- trim() -->
+<!-- 33. toWellFormed() -->
+<article class="article">
+  <div class="anchor" id="to-well-formed-string"></div>
+  <h3>Метод toWellFormed()</h3>
+</article>
+
+<!-- 34. trim() -->
 <article class="article">
   <div class="anchor" id="trim-string"></div>
   <h3>Метод trim()</h3>
@@ -646,7 +703,7 @@
   <br>“Frontend”</code>
 </article>
 
-<!-- trimEnd() -->
+<!-- 35. trimEnd() -->
 <article class="article">
   <div class="anchor" id="trim-end-string"></div>
   <h3>Метод trimEnd()</h3>
@@ -655,7 +712,7 @@
   <br>“   Frontend”</code>
 </article>
 
-<!-- trimStart() -->
+<!-- 36. trimStart() -->
 <article class="article">
   <div class="anchor" id="trim-start-string"></div>
   <h3>Метод trimStart()</h3>
@@ -664,147 +721,8 @@
   <br>“Frontend   ”</code>
 </article>
 
-<!-- valueOf() -->
+<!-- 37. valueOf() -->
 <article class="article">
   <div class="anchor" id="value-of-string"></div>
   <h3>Метод valueOf()</h3>
-</article>
-
-<!-- Таблица ASCII -->
-<article class="article">
-  <div class="anchor" id="ascii"></div>
-  <h2>Таблица ASCII</h2>
-  <p>Так выглядит таблица ASCII (American Standard Code for Information Interchange) с символами от 0 до 127</p>
-<pre>
-  DEC  HEX  CHAR
-  -------------
-    0  00   NUL (Null)
-    1  01   SOH (Start of Heading)
-    2  02   STX (Start of Text)
-    3  03   ETX (End of Text)
-    4  04   EOT (End of Transmission)
-    5  05   ENQ (Enquiry)
-    6  06   ACK (Acknowledgment)
-    7  07   BEL (Bell)
-    8  08   BS  (Backspace)
-    9  09   TAB (Horizontal Tab)
-   10  0A   LF  (Line Feed)
-   11  0B   VT  (Vertical Tab)
-   12  0C   FF  (Form Feed)
-   13  0D   CR  (Carriage Return)
-   14  0E   SO  (Shift Out)
-   15  0F   SI  (Shift In)
-   16  10   DLE (Data Link Escape)
-   17  11   DC1 (Device Control 1)
-   18  12   DC2 (Device Control 2)
-   19  13   DC3 (Device Control 3)
-   20  14   DC4 (Device Control 4)
-   21  15   NAK (Negative Acknowledgement)
-   22  16   SYN (Synchronous Idle)
-   23  17   ETB (End of Transmission Block)
-   24  18   CAN (Cancel)
-   25  19   EM  (End of Medium)
-   26  1A   SUB (Substitute)
-   27  1B   ESC (Escape)
-   28  1C   FS  (File Separator)
-   29  1D   GS  (Group Separator)
-   30  1E   RS  (Record Separator)
-   31  1F   US  (Unit Separator)
-   32  20   SPACE (Space)
-   33  21   !   (Exclamation Mark)
-   34  22   "   (Double Quote)
-   35  23   #   (Number Sign)
-   36  24   $   (Dollar Sign)
-   37  25   %   (Percent Sign)
-   38  26   &   (Ampersand)
-   39  27   '   (Single Quote)
-   40  28   (   (Left Parenthesis)
-   41  29   )   (Right Parenthesis)
-   42  2A   *   (Asterisk)
-   43  2B   +   (Plus Sign)
-   44  2C   ,   (Comma)
-   45  2D   -   (Hyphen-Minus)
-   46  2E   .   (Period)
-   47  2F   /   (Slash)
-   48  30   0   (Digit Zero)
-   49  31   1   (Digit One)
-   50  32   2   (Digit Two)
-   51  33   3   (Digit Three)
-   52  34   4   (Digit Four)
-   53  35   5   (Digit Five)
-   54  36   6   (Digit Six)
-   55  37   7   (Digit Seven)
-   56  38   8   (Digit Eight)
-   57  39   9   (Digit Nine)
-   58  3A   :   (Colon)
-   59  3B   ;   (Semicolon)
-   60  3C   &lt;   (Less-Than Sign)
-   61  3D   =   (Equal Sign)
-   62  3E   &gt;   (Greater-Than Sign)
-   63  3F   ?   (Question Mark)
-   64  40   @   (Commercial At)
-   65  41   A
-   66  42   B
-   67  43   C
-   68  44   D
-   69  45   E
-   70  46   F
-   71  47   G
-   72  48   H
-   73  49   I
-   74  4A   J
-   75  4B   K
-   76  4C   L
-   77  4D   M
-   78  4E   N
-   79  4F   O
-   80  50   P
-   81  51   Q
-   82  52   R
-   83  53   S
-   84  54   T
-   85  55   U
-   86  56   V
-   87  57   W
-   88  58   X
-   89  59   Y
-   90  5A   Z
-   91  5B   [   (Left Square Bracket)
-   92  5C   \   (Backslash)
-   93  5D   ]   (Right Square Bracket)
-   94  5E   ^   (Caret / Circumflex)
-   95  5F   _   (Underscore)
-   96  60   `   (Grave Accent)
-   97  61   a
-   98  62   b
-   99  63   c
-  100  64   d
-  101  65   e
-  102  66   f
-  103  67   g
-  104  68   h
-  105  69   i
-  106  6A   j
-  107  6B   k
-  108  6C   l
-  109  6D   m
-  110  6E   n
-  111  6F   o
-  112  70   p
-  113  71   q
-  114  72   r
-  115  73   s
-  116  74   t
-  117  75   u
-  118  76   v
-  119  77   w
-  120  78   x
-  121  79   y
-  122  7A   z
-  123  7B   {   (Left Curly Brace)
-  124  7C   |   (Vertical Bar)
-  125  7D   }   (Right Curly Brace)
-  126  7E   ~   (Tilde)
-  127  7F   DEL (Delete)
-</pre>
 </article>
